test/semantic/good/jeffrey-test-weird.mC
int foo(int a, char b, int c){
int d[5];

c = a;
}

int main(){

int a;
int b;
int c;
a=5;
b=7;
c=foo(a,'c',b);
}

