test/semantic/bad/jeffrey-test-badassignments.mC
int main(){
int a;
char b;
string c;
void d;
a=b;
b=c;
c=d;
a=2;
b=2;
c=3;
d=4;
c="all good men";
}
